--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                 Hi, I am Saaduddin Mahmud. I am an undergraduate student 
                 at Department of Computer Science and Engineering, University Of Dhaka.
                 I am intereseted in Artificial Intelegence. My current research work 
-                includes Decesion Making in Multi-Agent Systems and Security Game.
+                includes Decesion Making in Multi-Agent Systems and Security Games.
                 You can download my complete CV here: <a href="SaadCV.pdf" style="color:red" download>Download CV</a>
             </p>
         </div>
@@ -69,8 +69,8 @@
             <dd>
                 <ul>
 					<li><strong style="color:blue">January 2020:</strong> AAMAS paper on <strong>AED: An Anytime Evolutionary DCOP Algorithm</strong> accepted.</li>
-					<li><strong style="color:blue">January 2020:</strong> Received a ICT innovation grant to work on Security Game!</li>
-					<li><strong style="color:blue">January 2020:</strong> Successfully defended undergraduate thesis!</li>
+					<li><strong style="color:blue">January 2020:</strong> Received a ICT innovation grant to work on Security Games!</li>
+					<li><strong style="color:blue">January 2020:</strong> Successfully defended my undergraduate thesis!</li>
 					<li><strong style="color:blue">November 2019:</strong> AAAI paper on <strong>A Particle Swarm Based Algorithm for Functional Distributed Constraint Optimization Problems</strong> accepted.</li>
                 
                    </ul>
@@ -81,11 +81,11 @@
             <dd>
                 <ul>
 					<li><strong style="color:blue">February 2019:</strong> <a href="https://medium.com/@saadmahmud14/parallel-programming-with-cuda-tutorial-part-3-c29b7628a289"
-					 style="color:black">Parallel Programming With CUDA Tutorial (Part-3: Matrix Multiplication).</a></li>
+					 style="color:black">Parallel Programming With CUDA Tutorial (Part-3: Matrix Multiplication)</a></li>
 					<li><strong style="color:blue">August 2018:</strong> <a href="https://medium.com/@saadmahmud14/parallel-programming-with-cuda-tutorial-part-2-96f6eaea2832"
-					 style="color:black">Parallel Programming With CUDA Tutorial (Part-2: Basics).</a></li>
+					 style="color:black">Parallel Programming With CUDA Tutorial (Part-2: Basics)</a></li>
 					<li><strong style="color:blue">August 2018:</strong> <a href="https://medium.com/@saadmahmud14/parallel-programming-with-cuda-tutorial-part-1-8c72dda64d93" 
-					style="color:black">Parallel Programming With CUDA Tutorial (Part-1: Setup).</a></li>
+					style="color:black">Parallel Programming With CUDA Tutorial (Part-1: Setup)</a></li>
                    </ul>
             </dd>
             
