--- a/index.html
+++ b/index.html
@@ -52,10 +52,9 @@
                 
         <div id="objective">
             <p>
-                Hi, I am Saaduddin Mahmud. I am an undergraduate student 
-                at Department of Computer Science and Engineering, University Of Dhaka.
-                I am intereseted in Artificial Intelegence. My current research work 
-                includes Decesion Making in Multi-Agent Systems and Security Games.
+                Hi, I am Saaduddin Mahmud. I am an undergraduate student at Department of Computer Science and Engineering,
+		    University Of Dhaka. I am interested in Artificial Intelligence. 
+		    My current research work includes Decision Making in Multi-Agent Systems and Security Games.
                 You can download my complete CV here: <a href="SaadCV.pdf" style="color:red" download>Download CV</a>
             </p>
         </div>
