--- a/index.html
+++ b/index.html
@@ -67,11 +67,10 @@
             <dt>News</dt>
             <dd>
                 <ul>
+					<li><strong style="color:blue">February 2020:</strong> Started working at CAIL Research Group, University of Dhaka. </li>
 					<li><strong style="color:blue">January 2020:</strong> AAMAS paper on <strong>AED: An Anytime Evolutionary DCOP Algorithm</strong> accepted.</li>
 					<li><strong style="color:blue">January 2020:</strong> Received a ICT innovation grant to work on Security Games!</li>
 					<li><strong style="color:blue">January 2020:</strong> Successfully defended my undergraduate thesis!</li>
-					<li><strong style="color:blue">November 2019:</strong> AAAI paper on <strong>A Particle Swarm Based Algorithm for Functional Distributed Constraint Optimization Problems</strong> accepted.</li>
-                
                    </ul>
             </dd>
             
