--- a/index.html
+++ b/index.html
@@ -91,6 +91,8 @@
             <dt>Publications</dt>
             <dd>
                 <ol>
+					<li><strong>Saaduddin Mahmud</strong>, Md. Mosaddek Khan, Moumita Choudhury, Long Tran-Thanh, and Nicholas R. Jennings.
+					Learning Optimal Temperature Region for Solving Mixed Integer Functional DCOPs. https://arxiv.org/abs/2002.12001.</li>
 					<li><strong>Saaduddin Mahmud</strong>, Moumita Choudhury, Md. Mosaddek Khan, Long Tran-Thanh, and Nicholas R. Jennings.
 					AED: An Anytime Evolutionary DCOP Algorithm. To appear in the proceedings of the 19th International Conference on Autonomous
 					Agents and Multi-Agent Systems, 2020.</li>
