--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@
                 GitHub: <a href="https://github.com/Saad-Mahmud" style="color:blue">Saad-Mahmud</a> <br/>
                 Twitter: <a href="https://twitter.com/arkdron" style="color:blue">@arkdron</a><br/>
                 Medium: <a href="https://medium.com/@saadmahmud14" style="color:blue">Saaduddin Mahmud</a>
+		LinkedIn: <a href="https://bd.linkedin.com/in/saaduddin-mahmud-6b847b35" style="color:blue">Saaduddin Mahmud</a>
             </p>
         </div>
                 
