--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                 Research Gate: <a href="https://www.researchgate.net/profile/Saaduddin_Mahmud" style="color:blue">Saaduddin_Mahmud</a> <br/>
                 GitHub: <a href="https://github.com/Saad-Mahmud" style="color:blue">Saad-Mahmud</a> <br/>
                 Twitter: <a href="https://twitter.com/arkdron" style="color:blue">@arkdron</a><br/>
-                Medium: <a href="https://medium.com/@saadmahmud14" style="color:blue">Saaduddin Mahmud</a>
+                Medium: <a href="https://medium.com/@saadmahmud14" style="color:blue">Saaduddin Mahmud</a><br/>
 		LinkedIn: <a href="https://bd.linkedin.com/in/saaduddin-mahmud-6b847b35" style="color:blue">Saaduddin Mahmud</a>
             </p>
         </div>
