--- a/index.html
+++ b/index.html
@@ -100,6 +100,9 @@
 					<li>Moumita Choudhury, <strong>Saaduddin Mahmud</strong>, and Md. Mosaddek Khan. A Particle Swarm Based Algorithm for Functional Distributed Constraint Optimization Problems. 
 					To appear in the proceedings of the Thirty-Fourth AAAI Conference
 					on Artificial Intelligence, 2020.</li>
+					<li><strong>Saaduddin Mahmud</strong> and Moumita Choudhury. ApplyingPopulation-BasedAlgorithmstoSolveLarge(F)DCOPs.
+					Undergraduate Thesis, Department of Computer Science and Engineering, University Of Dhaka, 2020
+			</li>
 					
                    </ol>
             </dd>
