--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
             <dd>
                 <ol>
 					<li><strong>Saaduddin Mahmud</strong>, Md. Mosaddek Khan, Moumita Choudhury, Long Tran-Thanh, and Nicholas R. Jennings.
-					Learning Optimal Temperature Region for Solving Mixed Integer Functional DCOPs. https://arxiv.org/abs/2002.12001.</li>
+					Learning Optimal Temperature Region for Solving Mixed Integer Functional DCOPs. Proceedings of the 29th International Joint Conference on Artificial Intelligence (IJCAI-PRICAI 2020)
 					<li><strong>Saaduddin Mahmud</strong>, Moumita Choudhury, Md. Mosaddek Khan, Long Tran-Thanh, and Nicholas R. Jennings.
 					AED: An Anytime Evolutionary DCOP Algorithm. To appear in the proceedings of the 19th International Conference on Autonomous
 					Agents and Multi-Agent Systems, 2020.</li>
