--- a/index.html
+++ b/index.html
@@ -93,12 +93,13 @@
             <dd>
                 <ol>
 					<li><strong>Saaduddin Mahmud</strong>, Md. Mosaddek Khan, Moumita Choudhury, Long Tran-Thanh, and Nicholas R. Jennings.
-					Learning Optimal Temperature Region for Solving Mixed Integer Functional DCOPs. Proceedings of the 29th International Joint Conference on Artificial Intelligence (IJCAI-PRICAI 2020)
+					Learning Optimal Temperature Region for Solving Mixed Integer Functional DCOPs. To appear in the proceedings of the 29th 
+					International Joint Conference on Artificial Intelligence (IJCAI-PRICAI 2020).
 					<li><strong>Saaduddin Mahmud</strong>, Moumita Choudhury, Md. Mosaddek Khan, Long Tran-Thanh, and Nicholas R. Jennings.
 					AED: An Anytime Evolutionary DCOP Algorithm. To appear in the proceedings of the 19th International Conference on Autonomous
-					Agents and Multi-Agent Systems, 2020.</li>
+					Agents and Multi-Agent Systems (AAMAS 2020).</li>
 					<li>Moumita Choudhury, <strong>Saaduddin Mahmud</strong>, and Md. Mosaddek Khan. A Particle Swarm Based Algorithm for Functional Distributed Constraint Optimization Problems. 
-					To appear in the proceedings of the Thirty-Fourth AAAI Conference
+					To appear in the proceedings of the Thirty-Fourth AAAI Conference (AAAI 2020).
 					on Artificial Intelligence, 2020.</li>
 					<li><strong>Saaduddin Mahmud</strong> and Moumita Choudhury. Applying Population-Based Algorithms to Solve Large (F)DCOPs.
 					Undergraduate Thesis, Department of Computer Science and Engineering, University Of Dhaka, 2020.
