--- a/index.html
+++ b/index.html
@@ -99,8 +99,8 @@
 					AED: An Anytime Evolutionary DCOP Algorithm. To appear in the proceedings of the 19th International Conference on Autonomous
 					Agents and Multi-Agent Systems (AAMAS 2020).</li>
 					<li>Moumita Choudhury, <strong>Saaduddin Mahmud</strong>, and Md. Mosaddek Khan. A Particle Swarm Based Algorithm for Functional Distributed Constraint Optimization Problems. 
-					To appear in the proceedings of the Thirty-Fourth AAAI Conference (AAAI 2020).
-					on Artificial Intelligence, 2020.</li>
+					To appear in the proceedings of the Thirty-Fourth AAAI Conference on 
+					Artificial Intelligence (AAAI 2020).</li>
 					<li><strong>Saaduddin Mahmud</strong> and Moumita Choudhury. Applying Population-Based Algorithms to Solve Large (F)DCOPs.
 					Undergraduate Thesis, Department of Computer Science and Engineering, University Of Dhaka, 2020.
 			</li>
