--- a/index.html
+++ b/index.html
@@ -68,11 +68,14 @@
             <dt>News</dt>
             <dd>
                 <ul>
+					<li><strong style="color:blue">April 2020:</strong> IJCAI paper on <strong>Learning Optimal Temperature Region for Solving Mixed 
+						Integer Functional DCOPs</strong> accepted.</li>
 					<li><strong style="color:blue">February 2020:</strong> Started working at CAIL Research Group, University of Dhaka. </li>
 					<li><strong style="color:blue">January 2020:</strong> AAMAS paper on <strong>AED: An Anytime Evolutionary DCOP Algorithm</strong> accepted.</li>
 					<li><strong style="color:blue">January 2020:</strong> Received a ICT innovation grant to work on Security Games!</li>
 					<li><strong style="color:blue">January 2020:</strong> Successfully defended my undergraduate thesis!</li>
-                   </ul>
+					
+		    </ul>
             </dd>
             
             <dd class="clear"></dd>
