--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
 
 <head>
+	<script id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script>
      <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
 	 <link rel='shortcut icon' type='image/x-icon' src="fv.png">
      <title>Saaduddin Mahmud</title>
