--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 
 <head>
 	<script id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script>
+	<link rel="stylesheet" href="style.css">
      <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
 	 <link rel='shortcut icon' type='image/x-icon' src="fv.png">
      <title>Saaduddin Mahmud</title>
