--- a/index.html
+++ b/index.html
@@ -63,8 +63,8 @@
                 Before joining the lab, I was an undergrad at the CSE department, University Of Dhaka. My current research interest includes:
                 <ul>
                     <li>Multi-agent Coordination and Planing (DCOPs, Multi-agent RL).</li>
+                    <li>Optimization and Inference on Graphs (Constraint network, Factor Graphs, PGMs).</li>
                     <li>AI for Social Impact and Computational Sustainability (Applying Game-theory and RL for social good).</li> 
-                    <li>Algorithmic Fairness.</li>
                     <li>Interaction Between Human and AI/Robot.</li>
                 </ul>
                 Although these are well established and separate subfields of AI, a common recurring theme in all of these is 
