--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                 
         
             <div ALIGN=JUSTIFY id="about">
-                I am a full-time research assistant at Cognitive Agents and Interaction Lab <a href="https://mmkhansajeeb.com/" style="color:blue">(CAIL)</a>, University of Dhaka. 
+                I am a full-time research assistant at Cognitive Agents and Interaction Lab <a href="http://mmkhansajeeb.com/" style="color:blue">(CAIL)</a>, University of Dhaka. 
                 Before joining the lab, I was an undergrad at the CSE department, University Of Dhaka. My current research interest includes:
                 <ul>
                     <li>Multi-agent Coordination and Planing (DCOPs, Multi-agent RL).</li>
