--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                 I am a full-time research assistant at Cognitive Agents and Interaction Lab <a href="http://mmkhansajeeb.com/" style="color:blue">(CAIL)</a>, University of Dhaka. 
                 Before joining the lab, I was an undergrad at the CSE department, University Of Dhaka. My current research interest includes:
                 <ul>
-                    <li>Multi-agent Coordination and Planing (DCOPs, Multi-agent RL).</li>
+                    <li>Multi-agent Coordination and Planning (DCOPs, Multi-agent RL).</li>
                     <li>Optimization and Inference on Graphs (Constraint network, Factor Graphs, PGMs).</li>
                     <li>AI for Social Impact and Computational Sustainability (Applying Game-theory and RL for social good).</li> 
                     <li>Interaction Between Human and AI/Robot.</li>
