--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
                 </ul>
                 Although these are well established and separate subfields of AI, a common recurring theme in all of these is 
                 the interaction among multiple intelligent entities (Robots, Human, Society as a whole). The interesting patterns 
-                and complex challenges that emerge from these interactions inspire me to further investigate these areas. 
+                and complex challenges that emerge from these interactions inspire me to investigate these areas. 
                 Ultimately my goal is to analyze such interactions and develop AI methods that solve these complex challenges; 
                 challenges such as Poverty, Hunger, Gender Equality, Access to Education and Health, Biodiversity Loss, Global Warming, 
                 and many more and have an overall good impact on the society and the environment we live in.
