--- a/index.html
+++ b/index.html
@@ -62,14 +62,14 @@
                 I am a full-time research assistant at Cognitive Agents and Interaction Lab <a href="http://mmkhansajeeb.com/" style="color:blue">(CAIL)</a>, University of Dhaka. 
                 Before joining the lab, I was an undergrad at the CSE department, University Of Dhaka. My current research interest includes:
                 <ul>
-                    <li>Multi-agent Coordination and Planning (DCOPs, Multi-agent RL).</li>
-                    <li>Optimization and Inference on Graphs (Constraint network, Factor Graphs, PGMs).</li>
-                    <li>AI for Social Impact and Computational Sustainability (Applying Game-theory and RL for social good).</li> 
-                    <li>Interaction Between Human and AI/Robot.</li>
+                    <li>Multi-agent Systems (Coordination and Planning, Multi-agent RL, Game Theory).</li>
+                    <li>Interaction Between Human and Robot/AI.</li>
+                    <li>AI for Social Impact and Computational Sustainability (Applying Game-theory and RL for social good).</li>
+		    <li>Decentralized Optimization and Inference (Constraint Network, Factor Graphs, PGMs)</li>
                 </ul>
                 Although these are well established and separate subfields of AI, a common recurring theme in all of these is 
                 the interaction among multiple intelligent entities (Robots, Human, Society as a whole). The interesting patterns 
-                and complex challenges that emerge from these interactions inspire me to investigate these areas. 
+                and complex challenges that emerge from these interactions that ignites my curiosity. 
                 You can download my complete CV here: <a href="SaadCV.pdf" style="color:red" download>[CV]</a>
             </div>
         
