--- a/index.html
+++ b/index.html
@@ -67,9 +67,8 @@
                     <li>AI for Social Impact and Computational Sustainability (Applying Game-theory and RL for social good).</li>
 		    <li>Decentralized Optimization and Inference (Constraint Network, Factor Graphs, PGMs)</li>
                 </ul>
-                Although these are well established and separate subfields of AI, a common recurring theme in all of these is 
-                the interaction among multiple intelligent entities (Robots, Human, Society as a whole). The interesting patterns 
-                and complex challenges that emerge from these interactions that ignites my curiosity. 
+               A common recurring theme in all of these is the interaction among multiple intelligent entities (Robots, Human, Society as a whole). 
+		    The interesting patterns and complex challenges that emerge from these interactions make me curious and drive me to do my research. 
                 You can download my complete CV here: <a href="SaadCV.pdf" style="color:red" download>[CV]</a>
             </div>
         
