--- a/index.html
+++ b/index.html
@@ -64,8 +64,8 @@
                 <ul>
                     <li>Multi-agent Systems (Coordination and Planning, Multi-agent RL, Game Theory).</li>
                     <li>Interaction Between Human and Robot/AI.</li>
-                    <li>AI for Social Impact and Computational Sustainability (Applying Game-theory and RL for social good).</li>
-		    <li>Decentralized Optimization and Inference (Constraint Network, Factor Graphs, PGMs)</li>
+                    <li>AI for Social Impact and Computational Sustainability.</li>
+		    <li>Decentralized Optimization and Inference.</li>
                 </ul>
                A common recurring theme in all of these is the interaction among multiple intelligent entities (Robots, Human, Society as a whole). 
 		    The interesting patterns and complex challenges that emerge from these interactions make me curious and drive me to do my research. 
