--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
                     Artificial Intelligence <b>(AAAI 2020)</b>.
                     <a href="https://aaai.org/ojs/index.php/AAAI/article/view/6198" style="color:blue">[AAAI]</a>
                 </li>
-					<li><strong>Saaduddin Mahmud</strong> and Moumita Choudhury (Equal Contribution). Applying Population-Based Algorithms to Solve Large (F)DCOPs.
+					<li><strong>Saaduddin Mahmud</strong> and <a href="https://moumitachoudhury.github.io/">Moumita Choudhury</a> (Equal Contribution). Applying Population-Based Algorithms to Solve Large (F)DCOPs.
 					<b>Undergraduate Thesis</b>, Department of Computer Science and Engineering, University Of Dhaka, 2020.</li>
 					
                    </ol>
