--- a/index.html
+++ b/index.html
@@ -59,8 +59,7 @@
                 
         
             <div ALIGN=JUSTIFY id="about">
-                I am a full-time research assistant at <a href="http://mmkhansajeeb.com/" style="color:blue">Cognitive Agents and Interaction Lab (CAIL)</a>, 
-		    <a href="http://mmkhansajeeb.com/" style="color:blue">CSE, University of Dhaka</a>. 
+                I am a full-time research assistant at <a href="http://mmkhansajeeb.com/" style="color:blue">Cognitive Agents and Interaction Lab (CAIL)</a>, University of Dhaka. 
                 Before joining the lab full-time, I was an undergrad at the <a href="http://www.cse.du.ac.bd/" style="color:blue">Department of Computer Science and Engineering, University Of Dhaka</a>. My current research interest includes:
                 <ul>
                     <li>Autonomous Agents and Multi-Agent Systems.</li>
