--- a/index.html
+++ b/index.html
@@ -93,12 +93,18 @@
             <dd class="clear"></dd>
             <h3 id="projects">Current Research Projects:</h3>
                 <ol>
-					<li><strong>Saaduddin Mahmud</strong>, <a href="http://mmkhansajeeb.com/index.html">Md. Mosaddek Khan</a>, and 
+			<li><strong>Saaduddin Mahmud</strong>, <a href="http://mmkhansajeeb.com/index.html">Md. Mosaddek Khan</a>, and 
 						<a href="https://www.imperial.ac.uk/people/n.jennings">Nicholas R. Jennings</a>.
                         On Population-Based Algorithms for Distributed Constraint Optimization Problems (Under Review).
                     <a href="https://arxiv.org/abs/2009.01625" style="color:blue">[ARXIV]</a>
-                    <li>Using Reinforcement Learning for Multi-Agent Coordination and Allocation of Security Resources. On going research project as a part of the ICT Innovation Grant.</li>
-                   </ol>
+                	    
+					<li>K. M. Merajul Arefin, <a href="https://mashrur29.github.io/mashrurrashik/">Mashrur Rashik</a>, 
+						<strong>Saaduddin Mahmud</strong>, 
+						and <a href="http://mmkhansajeeb.com/index.html">Md. Mosaddek Khan</a>.
+                        An Artificial Bee Colony Based Algorithm for Continuous DCOPs. \textbf{Under Review, 2020}.
+                    <a href="https://arxiv.org/abs/2009.01625" style="color:blue">[ARXIV]</a>
+                	    
+		</ol>
             <dd class="clear"></dd>
             <h3 id="publications">Publications:</h3>
                 <ol>
