--- a/index.html
+++ b/index.html
@@ -93,16 +93,17 @@
             <dd class="clear"></dd>
             <h3 id="projects">Current Research Projects:</h3>
                 <ol>
+			
+			<li><strong>Saaduddin Mahmud</strong>, and <a href="http://mmkhansajeeb.com/index.html">Md. Mosaddek Khan</a>.
+                        Ad Hoc Teamwork in Multi-Robot Pathfinding Domain: Formulation and Algorithms (Working Paper).</li>
 			<li><strong>Saaduddin Mahmud</strong>, <a href="http://mmkhansajeeb.com/index.html">Md. Mosaddek Khan</a>, and 
 						<a href="https://www.imperial.ac.uk/people/n.jennings">Nicholas R. Jennings</a>.
                         On Population-Based Algorithms for Distributed Constraint Optimization Problems (Under Review).
-                    <a href="https://arxiv.org/abs/2009.01625" style="color:blue">[ARXIV]</a>
-                	    
+                    <a href="https://arxiv.org/abs/2009.01625" style="color:blue">[ARXIV]</a></li>
 					<li>K. M. Merajul Arefin, <a href="https://mashrur29.github.io/mashrurrashik/">Mashrur Rashik</a>, 
 						<strong>Saaduddin Mahmud</strong>, 
 						and <a href="http://mmkhansajeeb.com/index.html">Md. Mosaddek Khan</a>.
-                        An Artificial Bee Colony Based Algorithm for Continuous DCOPs. \textbf{Under Review, 2020}.
-                    <a href="https://arxiv.org/abs/2009.01625" style="color:blue">[ARXIV]</a>
+                        An Artificial Bee Colony Based Algorithm for Continuous DCOPs (Under Review, 2020).</li>
                 	    
 		</ol>
             <dd class="clear"></dd>
