--- a/index.html
+++ b/index.html
@@ -93,7 +93,8 @@
             <dd class="clear"></dd>
             <h3 id="projects">Current Research Projects:</h3>
                 <ol>
-			
+			<li>Rafid Amir Mahmud, Fahim Faisal, <strong>Saaduddin Mahmud</strong>, and <a href="http://mmkhansajeeb.com/index.html">Md. Mosaddek Khan</a>.
+                        GraphZero: Using Graph Neural Networks for Solving Combinatorial Games on Graphs (Working Paper, Part of ICT Innovation Grant AI4SG Project, 2020).</li> 
 			<li><strong>Saaduddin Mahmud</strong>, and <a href="http://mmkhansajeeb.com/index.html">Md. Mosaddek Khan</a>.
                         Ad Hoc Teamwork in Multi-Robot Pathfinding Domain: Formulation and Algorithms (Working Paper).</li>
 			<li><strong>Saaduddin Mahmud</strong>, <a href="http://mmkhansajeeb.com/index.html">Md. Mosaddek Khan</a>, and 
