--- a/index.html
+++ b/index.html
@@ -96,6 +96,8 @@
 			<li>Rafid Amir Mahmud, Fahim Faisal, <strong>Saaduddin Mahmud</strong>, and <a href="http://mmkhansajeeb.com/index.html">Md. Mosaddek Khan</a>.
                         GraphZero: Using Graph Neural Networks for Solving Combinatorial Games on Graphs (Working Paper, Part of ICT Innovation Grant AI4SG Project, 2020).</li> 
 			<li><strong>Saaduddin Mahmud</strong>, and <a href="http://mmkhansajeeb.com/index.html">Md. Mosaddek Khan</a>.
+                        Safe Decentralized Cooperative Stochastic Bandits (Working Paper).</li>
+			<li><strong>Saaduddin Mahmud</strong>, and <a href="http://mmkhansajeeb.com/index.html">Md. Mosaddek Khan</a>.
                         Ad Hoc Teamwork in Multi-Robot Pathfinding Domain: Formulation and Algorithms (Working Paper).</li>
 			<li><strong>Saaduddin Mahmud</strong>, <a href="http://mmkhansajeeb.com/index.html">Md. Mosaddek Khan</a>, and 
 						<a href="https://www.imperial.ac.uk/people/n.jennings">Nicholas R. Jennings</a>.
