--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
 			<li>Rafid Amir Mahmud, Fahim Faisal, <strong>Saaduddin Mahmud</strong>, and <a href="http://mmkhansajeeb.com/index.html">Md. Mosaddek Khan</a>.
                         GraphZero: Using Graph Neural Networks for Solving Combinatorial Games on Graphs (Working Paper, Part of ICT Innovation Grant AI4SG Project, 2020).</li> 
 			<li><strong>Saaduddin Mahmud</strong>, and <a href="http://mmkhansajeeb.com/index.html">Md. Mosaddek Khan</a>.
-                        Safe Decentralized Cooperative Stochastic Bandits (Working Paper).</li>
+                        Safe Risk-Averse Decentralized Cooperative Stochastic Bandits (Working Paper).</li>
 			<li><strong>Saaduddin Mahmud</strong>, and <a href="http://mmkhansajeeb.com/index.html">Md. Mosaddek Khan</a>.
                         Ad Hoc Teamwork in Multi-Robot Pathfinding Domain: Formulation and Algorithms (Working Paper).</li>
 			<li><strong>Saaduddin Mahmud</strong>, <a href="http://mmkhansajeeb.com/index.html">Md. Mosaddek Khan</a>, and 
@@ -106,7 +106,7 @@
 					<li>K. M. Merajul Arefin, <a href="https://mashrur29.github.io/mashrurrashik/">Mashrur Rashik</a>, 
 						<strong>Saaduddin Mahmud</strong>, 
 						and <a href="http://mmkhansajeeb.com/index.html">Md. Mosaddek Khan</a>.
-                        An Artificial Bee Colony Based Algorithm for Continuous DCOPs (Under Review, 2020).</li>
+                        An Artificial Bee Colony Based Algorithm for Continuous DCOPs (Under Review).</li>
                 	    
 		</ol>
             <dd class="clear"></dd>
