--- a/index.html
+++ b/index.html
@@ -93,19 +93,24 @@
             <dd class="clear"></dd>
             <h3 id="projects">Current Research Projects:</h3>
                 <ol>
-			<li>Rafid Amir Mahmud, Fahim Faisal, <strong>Saaduddin Mahmud</strong>, and <a href="http://mmkhansajeeb.com/index.html">Md. Mosaddek Khan</a>.
+			<li>Rafid Amir Mahmud, Fahim Faisal, <strong>Saaduddin Mahmud</strong>, 
+				and <a href="http://mmkhansajeeb.com/index.html" style="color:blue">Md. Mosaddek Khan</a>.
                         GraphZero: Using Graph Neural Networks for Solving Combinatorial Games on Graphs (Working Paper, Part of ICT Innovation Grant AI4SG Project, 2020).</li> 
-			<li><strong>Saaduddin Mahmud</strong>, and <a href="http://mmkhansajeeb.com/index.html">Md. Mosaddek Khan</a>.
+			<li><strong>Saaduddin Mahmud</strong>, and 
+				<a href="http://mmkhansajeeb.com/index.html" style="color:blue">Md. Mosaddek Khan</a>.
                         Safe Risk-Averse Decentralized Cooperative Stochastic Bandits (Working Paper).</li>
-			<li><strong>Saaduddin Mahmud</strong>, and <a href="http://mmkhansajeeb.com/index.html">Md. Mosaddek Khan</a>.
+			<li><strong>Saaduddin Mahmud</strong>, and 
+				<a href="http://mmkhansajeeb.com/index.html" style="color:blue">Md. Mosaddek Khan</a>.
                         Ad Hoc Teamwork in Multi-Robot Pathfinding Domain: Formulation and Algorithms (Working Paper).</li>
-			<li><strong>Saaduddin Mahmud</strong>, <a href="http://mmkhansajeeb.com/index.html">Md. Mosaddek Khan</a>, and 
-						<a href="https://www.imperial.ac.uk/people/n.jennings">Nicholas R. Jennings</a>.
+			<li><strong>Saaduddin Mahmud</strong>, 
+				<a href="http://mmkhansajeeb.com/index.html" style="color:blue">Md. Mosaddek Khan</a>, and 
+						<a href="https://www.imperial.ac.uk/people/n.jennings" style="color:blue">Nicholas R. Jennings</a>.
                         On Population-Based Algorithms for Distributed Constraint Optimization Problems (Under Review).
                     <a href="https://arxiv.org/abs/2009.01625" style="color:blue">[ARXIV]</a></li>
-					<li>K. M. Merajul Arefin, <a href="https://mashrur29.github.io/mashrurrashik/">Mashrur Rashik</a>, 
+					<li>K. M. Merajul Arefin, 
+						<a href="https://mashrur29.github.io/mashrurrashik/" style="color:blue">Mashrur Rashik</a>, 
 						<strong>Saaduddin Mahmud</strong>, 
-						and <a href="http://mmkhansajeeb.com/index.html">Md. Mosaddek Khan</a>.
+						and <a href="http://mmkhansajeeb.com/index.html" style="color:blue">Md. Mosaddek Khan</a>.
                         An Artificial Bee Colony Based Algorithm for Continuous DCOPs (Under Review).</li>
                 	    
 		</ol>
