--- a/index.html
+++ b/index.html
@@ -118,19 +118,19 @@
             <h3 id="publications">Publications:</h3>
                 <ol>
 					<li><strong>Saaduddin Mahmud</strong>, 
-						<a href="http://mmkhansajeeb.com/index.html">Md. Mosaddek Khan</a>,
-						<a href="https://moumitachoudhury.github.io/">Moumita Choudhury</a>, 
-						<a href="https://human-agentlearning.github.io/">Long Tran-Thanh</a>, 
-						and <a href="https://www.imperial.ac.uk/people/n.jennings">Nicholas R. Jennings</a>.
+						<a href="http://mmkhansajeeb.com/index.html" style="color:blue">Md. Mosaddek Khan</a>,
+						<a href="https://moumitachoudhury.github.io/" style="color:blue">Moumita Choudhury</a>, 
+						<a href="https://human-agentlearning.github.io/" style="color:blue">Long Tran-Thanh</a>, 
+						and <a href="https://www.imperial.ac.uk/people/n.jennings" style="color:blue">Nicholas R. Jennings</a>.
 					Learning Optimal Temperature Region for Solving Mixed Integer Functional DCOPs. In the proceedings of the 29th 
                     International Joint Conference on Artificial Intelligence <b>(IJCAI 2020)</b>.
                     <a href="https://arxiv.org/abs/2002.12001" style="color:blue">[ARXIV]</a>
                     <a href="https://www.ijcai.org/Proceedings/2020/0038.pdf" style="color:blue">[IJCAI]</a></li>
 					<li><strong>Saaduddin Mahmud</strong>,  
-						<a href="https://moumitachoudhury.github.io/">Moumita Choudhury</a>,
-						<a href="http://mmkhansajeeb.com/index.html">Md. Mosaddek Khan</a>, 
-						<a href="https://human-agentlearning.github.io/">Long Tran-Thanh</a>, 
-						and <a href="https://www.imperial.ac.uk/people/n.jennings">Nicholas R. Jennings</a>.
+						<a href="https://moumitachoudhury.github.io/" style="color:blue">Moumita Choudhury</a>,
+						<a href="http://mmkhansajeeb.com/index.html" style="color:blue">Md. Mosaddek Khan</a>, 
+						<a href="https://human-agentlearning.github.io/" style="color:blue">Long Tran-Thanh</a>, 
+						and <a href="https://www.imperial.ac.uk/people/n.jennings" style="color:blue">Nicholas R. Jennings</a>.
 					AED: An Anytime Evolutionary DCOP Algorithm. In the proceedings of the 19th International Conference on Autonomous
                     Agents and Multi-Agent Systems <b>(AAMAS 2020)</b>.
                     <a href="https://arxiv.org/abs/1909.06254" style="color:blue">[ARXIV]</a>
@@ -138,13 +138,13 @@
                     <a href="https://dl.acm.org/doi/abs/10.5555/3398761.3398859" style="color:blue">[ACM]</a></li>
 					    
                 </li>
-					<li><a href="https://moumitachoudhury.github.io/">Moumita Choudhury</a>, <strong>Saaduddin Mahmud</strong>, and 
-						<a href="http://mmkhansajeeb.com/index.html">Md. Mosaddek Khan</a>. A Particle Swarm Based Algorithm for Functional Distributed Constraint Optimization Problems. 
+					<li><a href="https://moumitachoudhury.github.io/" style="color:blue">Moumita Choudhury</a>, <strong>Saaduddin Mahmud</strong>, and 
+						<a href="http://mmkhansajeeb.com/index.html" style="color:blue">Md. Mosaddek Khan</a>. A Particle Swarm Based Algorithm for Functional Distributed Constraint Optimization Problems. 
 					In the proceedings of the Thirty-Fourth AAAI Conference on 
                     Artificial Intelligence <b>(AAAI 2020)</b>.
                     <a href="https://aaai.org/ojs/index.php/AAAI/article/view/6198" style="color:blue">[AAAI]</a>
                 </li>
-					<li><strong>Saaduddin Mahmud</strong> and <a href="https://moumitachoudhury.github.io/">Moumita Choudhury</a> (Equal Contribution). Applying Population-Based Algorithms to Solve Large (F)DCOPs.
+					<li><strong>Saaduddin Mahmud</strong> and <a href="https://moumitachoudhury.github.io/" style="color:blue">Moumita Choudhury</a> (Equal Contribution). Applying Population-Based Algorithms to Solve Large (F)DCOPs.
 					<b>Undergraduate Thesis</b>, Department of Computer Science and Engineering, University Of Dhaka, 2020.</li>
 					
                    </ol>
