--- a/index.html
+++ b/index.html
@@ -95,23 +95,23 @@
                 <ol>
 			<li>Rafid Amir Mahmud, Fahim Faisal, <strong>Saaduddin Mahmud</strong>, 
 				and <a href="http://mmkhansajeeb.com/index.html" style="color:blue">Md. Mosaddek Khan</a>.
-                        GraphZero: Using Graph Neural Networks for Solving Combinatorial Games on Graphs (<b>Working Paper</b>, Part of ICT Innovation Grant AI4SG Project, 2020).</li> 
+                        GraphZero: Using Graph Neural Networks for Solving Combinatorial Games on Graphs (<strong>Working Paper</strong>, Part of ICT Innovation Grant AI4SG Project, 2020).</li> 
 			<li><strong>Saaduddin Mahmud</strong>, and 
 				<a href="http://mmkhansajeeb.com/index.html" style="color:blue">Md. Mosaddek Khan</a>.
-                        Risk-Averse Decentralized Cooperative Stochastic Bandits (<b>Working Paper</b>).</li>
+                        Risk-Averse Decentralized Cooperative Stochastic Bandits (<strong>Working Paper</strong>).</li>
 			<li><strong>Saaduddin Mahmud</strong>, and 
 				<a href="http://mmkhansajeeb.com/index.html" style="color:blue">Md. Mosaddek Khan</a>.
-                        Ad Hoc Teamwork in Multi-Robot Pathfinding Domain: Formulation and Algorithms (<b>Working Paper</b>).</li>
+                        Ad Hoc Teamwork in Multi-Robot Pathfinding Domain: Formulation and Algorithms (<strong>Working Paper</strong>).</li>
 			<li><strong>Saaduddin Mahmud</strong>, 
 				<a href="http://mmkhansajeeb.com/index.html" style="color:blue">Md. Mosaddek Khan</a>, and 
 						<a href="https://www.imperial.ac.uk/people/n.jennings" style="color:blue">Nicholas R. Jennings</a>.
-                        On Population-Based Algorithms for Distributed Constraint Optimization Problems (<b>Under Review</b>).
+                        On Population-Based Algorithms for Distributed Constraint Optimization Problems (<strong>Under Review</strong>).
                     <a href="https://arxiv.org/abs/2009.01625" style="color:blue">[ARXIV]</a></li>
 					<li>K. M. Merajul Arefin, 
 						<a href="https://mashrur29.github.io/mashrurrashik/" style="color:blue">Mashrur Rashik</a>, 
 						<strong>Saaduddin Mahmud</strong>, 
 						and <a href="http://mmkhansajeeb.com/index.html" style="color:blue">Md. Mosaddek Khan</a>.
-                        An Artificial Bee Colony Based Algorithm for Continuous DCOPs (<b>Under Review</b).</li>
+                        An Artificial Bee Colony Based Algorithm for Continuous DCOPs (<strong>Under Review</strong>).</li>
                 	    
 		</ol>
             <dd class="clear"></dd>
