--- a/index.html
+++ b/index.html
@@ -78,6 +78,7 @@
             <h3 id= "news">News:</h3>
             
                 <ul>
+			<li><strong style="color:blue">January 2021:</strong> I will be presenting my work and volunteering at IJCAI-2020.</li>
                     <li><strong style="color:blue">September 2020:</strong> New preprint: 
                     <strong> On Population-Based Algorithms for Distributed Constraint Optimization Problems</strong>
                 is now available!</li>
