--- a/index.html
+++ b/index.html
@@ -82,6 +82,7 @@
                     <li><strong style="color:blue">September 2020:</strong> New preprint: 
                     <strong> On Population-Based Algorithms for Distributed Constraint Optimization Problems</strong>
                 is now available!</li>
+			<li><strong style="color:blue">May 2020:</strong> I will be presenting my work at AAMAS-2020.</li>
 					<li><strong style="color:blue">April 2020:</strong> IJCAI paper on <strong>Learning Optimal Temperature Region for Solving Mixed 
 						Integer Functional DCOPs</strong> accepted.</li>
 					<li><strong style="color:blue">February 2020:</strong> Started working at CAIL Research Group, University of Dhaka as a full-time research assitant. </li>
