--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
             <h3 id= "news">News:</h3>
             
                 <ul>
-			<li><strong style="color:blue">January 2021:</strong> I will be joining as a Junior Lecturer at
+			<li><strong style="color:blue">January 2021:</strong> I will be joining as a <strong>Junior Lecturer</strong> at
 				the <a href="http://www.aust.edu/" style="color:blue">Department of Computer Science and Engineering,
 				Ahsanullah University of Science and Technology</a>.</li>
 			<li><strong style="color:blue">January 2021:</strong> I will be presenting my work and volunteering at IJCAI-2020.</li>
