--- a/index.html
+++ b/index.html
@@ -75,6 +75,8 @@
             <h3 id= "news">News:</h3>
             
                 <ul>
+			<li><strong style="color:blue">August 2021:</strong> Started my <strong>Ph.D.</strong> at
+				<a href="cics.umass.edu" style="color:blue">UMass Amherst</a>. </li>
 			<li><strong style="color:blue">January 2021:</strong> I will be joining as a <strong>Junior Lecturer</strong> at
 				the <a href="http://www.aust.edu/" style="color:blue">Department of Computer Science and Engineering,
 				Ahsanullah University of Science and Technology</a>.</li>
@@ -89,8 +91,7 @@
 					<li><strong style="color:blue">January 2020:</strong> AAMAS paper on <strong>AED: An Anytime Evolutionary DCOP Algorithm</strong> accepted.</li>
 					<li><strong style="color:blue">January 2020:</strong> Received a ICT Innovation Grant to work on Security Games!</li>
 					<li><strong style="color:blue">January 2020:</strong> Successfully defended my undergraduate thesis!</li>
-					<li><strong style="color:blue">November 2019:</strong> AAAI paper on <strong>A Particle Swarm Based Algorithm for Functional Distributed Constraint Optimization Problems </strong> accepted.</li>
-		    </ul>
+			</ul>
             
             <dd class="clear"></dd>
             <h3 id="projects">Current Research Projects:</h3>
