--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                 
         
             <div ALIGN=JUSTIFY id="about">
-                I am a first-year Ph.D. student at UMass Amherst. 
+                I am a first-year Ph.D. student at <a href="cics.umass.edu" style="color:blue">UMass Amherst</a>. 
 		    My current research work revolves around the area of Human-centered AI and its application to Autonomous Vehicles. 
 		    Before starting my Ph.D. at UMass, I was a full-time Research Assistant at <a style="color:blue" href="http://mmkhansajeeb.com/cail.html">Cognitive Agents and Interaction Lab (CAIL)</a>, University of Dhaka, where I work on Multi-Agent Systems. 
 		    During this time, I also worked as a Lecturer at the <a style="color:blue" href="http://www.aust.edu/"> Department of Computer Science and Engineering, Ahsanullah University of Science and Technology </a> for a while. <br>
