--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         <a href="#app" style="color:black"><b><u>Softwares</u></b></a> || <a href="#blogs" style="color:black"><b><u>Blogs</u></b></a>
     </div>
     <div id="page-wrap">
-       <! --- <img src="pic.jpg" alt="Photo of saad" id="pic" style="width:200px;height:400px;"/> --->
+       <! --- <img src="pic.jpg" alt="Photo of saad" id="pic" style="width:200px;height:400px;"/> 
     
         <div id="contact-info" class="vcard">
         
