--- a/index.html
+++ b/index.html
@@ -99,10 +99,11 @@
 				and <a href="http://mmkhansajeeb.com/index.html" style="color:blue">Md. Mosaddek Khan</a>.
                         Learning Cooperation and Online Planning Through Simulation and Graph Convolutional Network (<strong>Under Review</strong>, Part of ICT Innovation Grant AI4SG Project, 2020).
 			<a href="https://arxiv.org/pdf/2110.08480.pdf" style="color:blue">[ARXIV]</a></li> 
-			
-			<li><strong>Saaduddin Mahmud</strong>, and 
-				<a href="http://mmkhansajeeb.com/index.html" style="color:blue">Md. Mosaddek Khan</a>.
-                        Risk-Averse Decentralized Cooperative Stochastic Bandits (<strong>Working Paper</strong>).</li>
+
+			<li><strong>Saaduddin Mahmud</strong>, Sandhya Saisubramanian, and Shlomo Zilberstein. 
+				Reducing Negative Side Effects in Autonomous Systems.(<strong>Working Paper 2021</strong>).</li>
+			<li><strong>Saaduddin Mahmud</strong>, and Shlomo Zilberstein. 
+				Explanation Generation for Autonomous Vehicle.(<strong>Working Paper 2021</strong>).</li>
 			<li><strong>Saaduddin Mahmud</strong>, 
 				<a href="http://mmkhansajeeb.com/index.html" style="color:blue">Md. Mosaddek Khan</a>, and 
 						<a href="https://www.imperial.ac.uk/people/n.jennings" style="color:blue">Nicholas R. Jennings</a>.
