--- a/index.html
+++ b/index.html
@@ -97,24 +97,15 @@
                 <ol>
 			<li>Rafid Amir Mahmud, Fahim Faisal, <strong>Saaduddin Mahmud</strong>, 
 				and <a href="http://mmkhansajeeb.com/index.html" style="color:blue">Md. Mosaddek Khan</a>.
-                        Learning Cooperation and Online Planning Through Simulation and Graph Convolutional Network (<strong>Under Review</strong>, Part of ICT Innovation Grant AI4SG Project, 2020).
+                        A Simulation Based Online Planning Algorithm for Multi-Agent Cooperative Environments.
+			<a href="https://www.ifaamas.org/Proceedings/aamas2022/pdfs/p1690.pdf" style="color:blue">[AAMAS 2022 (Ext. Abs.)]</a></li> 
 			<a href="https://arxiv.org/pdf/2110.08480.pdf" style="color:blue">[ARXIV]</a></li> 
 
 			<li><strong>Saaduddin Mahmud</strong>, Sandhya Saisubramanian, and Shlomo Zilberstein. 
 				Reducing Negative Side Effects in Autonomous Systems.(<strong>Working Paper 2021</strong>).</li>
 			<li><strong>Saaduddin Mahmud</strong>, and Shlomo Zilberstein. 
 				Explanation Generation for Autonomous Vehicle.(<strong>Working Paper 2021</strong>).</li>
-			<li><strong>Saaduddin Mahmud</strong>, 
-				<a href="http://mmkhansajeeb.com/index.html" style="color:blue">Md. Mosaddek Khan</a>, and 
-						<a href="https://www.imperial.ac.uk/people/n.jennings" style="color:blue">Nicholas R. Jennings</a>.
-                        On Population-Based Algorithms for Distributed Constraint Optimization Problems (<strong>Under Review</strong>).
-                    <a href="https://arxiv.org/abs/2009.01625" style="color:blue">[ARXIV]</a></li>
-					<li>K. M. Merajul Arefin, 
-						<a href="https://mashrur29.github.io/mashrurrashik/" style="color:blue">Mashrur Rashik</a>, 
-						<strong>Saaduddin Mahmud</strong>, 
-						and <a href="http://mmkhansajeeb.com/index.html" style="color:blue">Md. Mosaddek Khan</a>.
-                        An Artificial Bee Colony Based Algorithm for Continuous DCOPs (<strong>Under Review</strong>).
-			<a href="https://arxiv.org/pdf/2110.07780.pdf" style="color:blue">[ARXIV]</a></li>
+			
                 	    
 		</ol>
             <dd class="clear"></dd>
@@ -149,13 +140,13 @@
 		<li><strong>Saaduddin Mahmud</strong>, 
 				<a href="http://mmkhansajeeb.com/index.html" style="color:blue">Md. Mosaddek Khan</a>, and 
 						<a href="https://www.imperial.ac.uk/people/n.jennings" style="color:blue">Nicholas R. Jennings</a>.
-                        On Population-Based Algorithms for Distributed Constraint Optimization Problems (<strong>Under Review</strong>).
+                        On Population-Based Algorithms for Distributed Constraint Optimization Problems.
                     <a href="https://arxiv.org/abs/2009.01625" style="color:blue">[ARXIV]</a></li>
 					<li>K. M. Merajul Arefin, 
 						<a href="https://mashrur29.github.io/mashrurrashik/" style="color:blue">Mashrur Rashik</a>, 
 						<strong>Saaduddin Mahmud</strong>, 
 						and <a href="http://mmkhansajeeb.com/index.html" style="color:blue">Md. Mosaddek Khan</a>.
-                        An Artificial Bee Colony Based Algorithm for Continuous DCOPs (<strong>Under Review</strong>).
+                        An Artificial Bee Colony Based Algorithm for Continuous DCOPs.
 			<a href="https://arxiv.org/pdf/2110.07780.pdf" style="color:blue">[ARXIV]</a></li>
                 </li>
 					<li><strong>Saaduddin Mahmud</strong> and <a href="https://moumitachoudhury.github.io/" style="color:blue">Moumita Choudhury</a> (Equal Contribution). Applying Population-Based Algorithms to Solve Large (F)DCOPs.
