--- a/index.html
+++ b/index.html
@@ -93,19 +93,18 @@
 			</ul>
             
             <dd class="clear"></dd>
-            <h3 id="projects">Current Research Projects:</h3>
+            <h3 id="projects">Graduate Research Work:</h3>
                 <ol>
+			<li><strong>Saaduddin Mahmud</strong>, <a href="https://www.sandhyasai.com/" style="color:blue">Sandhya Saisubramanian</a>, and <a href="https://groups.cs.umass.edu/shlomo/" style="color:blue">Shlomo Zilberstein</a>. 
+				REVEALE: Reward Verification and Learning Using Explanations.(<strong>Under Review 2022</strong>).</li>
+			<li><a href="https://samernashed.com/" style="color:blue">Samer B. Nashed</a>, <strong>Saaduddin Mahmud</strong>, Claudia V. Goldman, and<a href="https://groups.cs.umass.edu/shlomo/" style="color:blue">Shlomo Zilberstein</a>. 
+				Causal Explanations for Sequential Decision Making Under Uncertainty: Foundations and Analysis.(<strong>Under Review 2022</strong>).
+			<a href="https://arxiv.org/pdf/2205.15462.pdf" style="color:blue">[ARXIV]</a></li>
 			<li>Rafid Amir Mahmud, Fahim Faisal, <strong>Saaduddin Mahmud</strong>, 
 				and <a href="http://mmkhansajeeb.com/index.html" style="color:blue">Md. Mosaddek Khan</a>.
                         A Simulation Based Online Planning Algorithm for Multi-Agent Cooperative Environments.
-			<a href="https://www.ifaamas.org/Proceedings/aamas2022/pdfs/p1690.pdf" style="color:blue">[AAMAS 2022 (Ext. Abs.)]</a></li> 
+			<a href="https://www.ifaamas.org/Proceedings/aamas2022/pdfs/p1690.pdf" style="color:blue">[AAMAS 2022 (Ext. Abs.)]</a> 
 			<a href="https://arxiv.org/pdf/2110.08480.pdf" style="color:blue">[ARXIV]</a></li> 
-
-			<li><strong>Saaduddin Mahmud</strong>, Sandhya Saisubramanian, and Shlomo Zilberstein. 
-				Reducing Negative Side Effects in Autonomous Systems.(<strong>Working Paper 2021</strong>).</li>
-			<li><strong>Saaduddin Mahmud</strong>, and Shlomo Zilberstein. 
-				Explanation Generation for Autonomous Vehicle.(<strong>Working Paper 2021</strong>).</li>
-			
                 	    
 		</ol>
             <dd class="clear"></dd>
