--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                 
         
             <div ALIGN=JUSTIFY id="about">
-                I am a 2nd-year MS/PhD student under <a href="https://groups.cs.umass.edu/shlomo/" style="color:blue">Shlomo Zilberstein</a> at <a href="cics.umass.edu" style="color:blue">UMass Amherst</a>. My current research work revolves around the area of Human-centered AI and its application to Autonomous Systems. 
+                I am a 2nd-year MS/PhD student under <a href="https://groups.cs.umass.edu/shlomo/" style="color:blue">Shlomo Zilberstein</a> at <a href="cics.umass.edu" style="color:blue">UMass Amherst</a>. My current research focuses on debugging A.I.s so that they can be safely deployed in real world. 
 		    Before starting my Ph.D. at UMass, I was a full-time Research Assistant at <a style="color:blue" href="http://mmkhansajeeb.com/cail.html">Cognitive Agents and Interaction Lab (CAIL)</a>, University of Dhaka, where I worked on Multi-Agent Systems. 
 		    During this time, I also worked as a Lecturer at the <a style="color:blue" href="http://www.aust.edu/"> Department of Computer Science and Engineering, Ahsanullah University of Science and Technology </a> for a while. <br>
 	 You can find my CV here: <a href="SaadCV.pdf" style="color:blue">[CV]</a>
