--- a/index.html
+++ b/index.html
@@ -74,6 +74,7 @@
             <h3 id= "news">News:</h3>
             
                 <ul>
+			<li><strong style="color:blue">January 2022:</strong> Abstract Accepted in AAMAS 2022.</li>
 			<li><strong style="color:blue">August 2021:</strong> Started my <strong>MS/PhD</strong> at
 				<a href="cics.umass.edu" style="color:blue">UMass Amherst</a>. </li>
 			<li><strong style="color:blue">January 2021:</strong> I will be joining as a <strong>Junior Lecturer</strong> at
