--- a/index.html
+++ b/index.html
@@ -47,9 +47,8 @@
             <h2 style="font-size:30px;"><u>Saaduddin Mahmud</u></h2>
 			
             <ul>
-                <li>Email: <a class="email" href="saadmahmud14@gmail.com" style="color:blue">saadmahmud14@gmail.com</a><br/></li>
+                <li>Email: <a class="email" href="smahmud@umass.edu" style="color:blue">saadmahmud14@gmail.com</a><br/></li>
                 <li>Google Scholar: <a href="https://scholar.google.com/citations?user=fMuMcAgAAAAJ" style="color:blue">Saaduddin Mahmud</a> <br/></li>
-                <li>Research Gate: <a href="https://www.researchgate.net/profile/Saaduddin_Mahmud" style="color:blue">Saaduddin_Mahmud</a> <br/></li>
                 <li>GitHub: <a href="https://github.com/Saad-Mahmud" style="color:blue">Saad-Mahmud</a> <br/></li>
                 <li>Twitter: <a href="https://twitter.com/saadu_ai" style="color:blue">@saadu_ai</a><br/></li>
                 <li>Medium: <a href="https://medium.com/@saadmahmud14" style="color:blue">Saaduddin Mahmud</a><br/></li>
@@ -59,7 +58,7 @@
                 
         
             <div ALIGN=JUSTIFY id="about">
-                I am a 2nd-year MS/PhD student under <a href="https://groups.cs.umass.edu/shlomo/" style="color:blue">Shlomo Zilberstein</a> at <a href="cics.umass.edu" style="color:blue">UMass Amherst</a>. My current research focuses on analyzing and debugging autonomous systems for safely deployed. 
+                I am a 2nd-year MS/PhD student under <a href="https://groups.cs.umass.edu/shlomo/" style="color:blue">Shlomo Zilberstein</a> at <a href="cics.umass.edu" style="color:blue">UMass Amherst</a>. My current research focuses on analyzing and debugging autonomous systems for safe deployment. 
 		    Before starting at UMass, I was a full-time Research Assistant at <a style="color:blue" href="http://mmkhansajeeb.com/cail.html">Cognitive Agents and Interaction Lab (CAIL)</a>, University of Dhaka, where I worked on Multi-Agent Systems. 
 		    During this time, I also worked as a Lecturer at the <a style="color:blue" href="http://www.aust.edu/"> Department of Computer Science and Engineering, Ahsanullah University of Science and Technology </a> for a while. <br>
 	 You can find my CV here: <a href="SaadCV.pdf" style="color:blue">[CV]</a>
